--- a/docker-compose.traefik.swarm.nohttps.yml
+++ b/docker-compose.traefik.swarm.nohttps.yml
@@ -15,17 +15,22 @@ services:
       # Enables web UI and tells Traefik to listen to docker
       #- --api
       - --api.insecure=true
-      # Logging
+      # Traefik Logging
       #- --log.level=DEBUG # DEBUG, ERROR, INFO???
       - --log.level=INFO # DEBUG, ERROR, INFO???
-      #- --log.level=ERROR # DEBUG, ERROR, INFO???
       - --log.filePath=/logs/traefik.log
       - --log.format=json
+      # Website Logging
+      - --accesslog=true
+      - --accesslog.filePath=/ACCESS_LOGS/access.log
+      - --accesslog.fields.defaultmode=keep 
+      - --accesslog.fields.headers.defaultmode=keep 
     ports:
       - "80:80"
       - "8080:8080"
     volumes:
       - ./logs:/logs
+      - /website/DOCKER/LOGS/TRAEFIK:/ACCESS_LOGS
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
